Fix align errors

--- a/recipe_.css
+++ b/recipe_.css
@@ -12,6 +12,7 @@
 .recipe_img_large {
 	width: 300px;
 	height: 300px;
+	vertical-align: top;
 }
 
 .recipe_img_round {
@@ -26,6 +27,16 @@
 	margin-bottom: 30px;
 }
 
+.recipe_subtitle {
+	font-style: italic;
+	font-family: fantasy;
+	font-weight: bold;
+}
+
+h1.recipe_name {
+	display: inline;
+	color: dimgrey;
+}
 
 .recipe_instructions {
 	margin-top: 30px;
@@ -43,13 +54,9 @@
 	padding-left: 20px;
 }
 
-h5.recipe_name {
-	display: inline;
-}
-
 #rating_img {
 	width: 100px;
-	margin-top: 35px;
+	margin-top: 12px;
 }
 
 .review_counts {
